Revision history for Perl module Net::Curl::Promiser

0.15
- BUG FIX: Load Net::Curl::Easy directly so that Net::Curl::Easy::Code’s
overloading gets loaded.

0.14 Tue 28 Jul 2020
- BUG FIX: Fix leaks on curl 7.19 (CentOS 6).

0.13 Sat 25 Jul 2020
- BREAKING CHANGE: The subclass interface has changed, and the new
  interface is no longer documented. Only the event interfaces that the
  distribution knows about are supported. (Patches to support additional
  interfaces will be considered.)
- BUG FIX: We no longer process pending requests within a callback.
  That processing caused libcurl corruption because we were removing handles
  within the callbacks. (cf. curl_multi_remove_handle(3))
- BUG FIX: Allow reuse of $easy within a promise callback.
- BUG FIX: Memory leaks are fixed; detection is added to prevent regressions.

0.12 Sun 5 Jul 2020
- Fix regression in IO::Async test.

0.11 Sat 4 Jul 2020
- Make fail_handle() and cancel_handle() detect non-pending requests.
- Make cancel_handle() act immediately rather than on the next
  event loop run. This fixes a bug that caused the event loop to hang.

0.10 Sat 9 May 2020
- Make event loop tests use distributed (pure-Perl) event loops.
- Tweak internal debug code

0.09 Fri 8 May 2020
- Add cancel_handle() method.
- Lazy-load modules platform-neutrally (rather than assuming *nix).
- Tweak docs wording.

0.08 Wed 26 Feb 2020
- Remove redundant stat() checks on file descriptors.
- Clarify event loop requirement not to close FDs.

0.07 Thu 6 Feb 2020
- Fix race conditions in AnyEvent and IO::Async.
- Ignore extra stop-poll callbacks. This appears to have been an issue
  with old libcurl versions (e.g., 7.29); there seems no reason to care.
- IO::Async - Prevent Perl from closing FDs that libcurl expects to use.
- Make tests work with Promise::XS.
- Tests now print the version of the event loop being used.

0.06 Fri 31 Jan 2020
- Add experimental Promise::XS support.