@@ -1,6 +1,9 @@
 Revision history for Perl module Net::Curl::Promiser
 
 0.15
+- BUG FIX: cancel_handle() and fail_handle() now immediately release
+event-loop interactions. Previously memory leak warnings happened if the
+cancel/fail happened on the last time through the event loop.
 - BUG FIX: Load Net::Curl::Easy directly so that Net::Curl::Easy::Code’s
 overloading gets loaded.
 
